--- a/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
+++ b/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
@@ -44,8 +44,17 @@ jobs:
       - name: Add source directory to Python path
         run: echo "PYTHONPATH=${GITHUB_WORKSPACE}" >> $GITHUB_ENV
 
-      - name: Run tests
-        run: python -m rdflib_serialize_ordered_turtle.py
+      - name: Run test 1
+        run: python -m ${GITHUB_WORKSPACE}/rdflib_serialize_ordered_turtle.py ${GITHUB_WORKSPACE}/test_files/pizzatutorial_v3-2.rdf
+
+      - name: Run test 2
+        run: python -m ${GITHUB_WORKSPACE}/rdflib_serialize_ordered_turtle.py ${GITHUB_WORKSPACE}/test_files/pizzatutorial_v3-2.ttl
+
+      - name: Run test 3
+        run: python -m ${GITHUB_WORKSPACE}/rdflib_serialize_ordered_turtle.py ${GITHUB_WORKSPACE}/test_files/PizzaTutorialWithDataV2.owl
+
+      - name: Run test 4
+        run: python -m ${GITHUB_WORKSPACE}/rdflib_serialize_ordered_turtle.py ${GITHUB_WORKSPACE}/test_files/PizzaTutorialWithDataV2.ttl
 
       - name: Check if there are any changes
         id: verify_diff
