--- a/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
+++ b/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Check if there are any changes
         id: verify_diff
         run: |
+          git status
           git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
 
       - name: Commit
