Separate diff and untracked files check into separate lines

--- a/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
+++ b/.github/workflows/python_generate_ordered_turtle_for_ontology.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Check if there are any changes
         id: verify_diff
         run: |
-          { git diff --quiet . & if [ -n "$(git ls-files . --exclude-standard --others)" ]; then exit 1; fi; } || echo "changed=true" >> $GITHUB_OUTPUT
+          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+          { if [ -n "$(git ls-files . --exclude-standard --others)" ]; then echo "changed=true" >> $GITHUB_OUTPUT; fi; }
 
       - name: Commit
         if: steps.verify_diff.outputs.changed == 'true'
